# tinyland-product-loader

./: .bazelrc  BUILD.bazel  MODULE.bazel  flake.nix  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: config.ts  index.ts  product-loader.ts  types.ts
tests/: product-loader.test.ts
